crates/function-metrics/tests/ui/fail/duplicate_labels.stderr
error: duplicate label key `method`
 --> tests/ui/fail/duplicate_labels.rs:3:20
  |
3 | #[function_metrics(labels(method, method))]
  |                    ^^^^^^
